AG-4713 - fixed menu button being visible outside of its header wrapper

--- a/community-modules/core/src/styles/structural/_common-structural.scss
+++ b/community-modules/core/src/styles/structural/_common-structural.scss
@@ -1242,6 +1242,7 @@ ag-grid, ag-grid-angular, ag-grid-ng2, ag-grid-polymer, ag-grid-aurelia  {
     align-items: center;
     width: 100%;
     height: 100%;
+    overflow: hidden;
 }
 
 .ag-right-aligned-header .ag-cell-label-container {
